--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "hbs": "^4.2.0",
     "mongoose": "^8.3.3",
     "nodemon": "^3.1.0",
+    "react": "^18.3.1",
     "validator": "^13.11.0"
   }
 }
